--- a/agb.html
+++ b/agb.html
@@ -47,7 +47,7 @@
 					  <a class="nav-link" href="shop.html">SHOP</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="kader.html">KADER</a>
+					  <a class="nav-link" href="kategorien.html">KADER</a>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link" href="ueberuns.html">ÜBER UNS</a>
