--- a/Frontend/Register.html
+++ b/Frontend/Register.html
@@ -122,12 +122,12 @@
         </nav>
     </header>     
 <style>	
-  font-family: Arial, Helvetica, sans-serif;
+  *{font-family: Arial, Helvetica, sans-serif;
   
-}
+  }
 
 
-{
+*{
   box-sizing: border-box;
 }
 
