--- a/Frontend/Startseite.html
+++ b/Frontend/Startseite.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -138,8 +137,8 @@
                                     <div class="m-v offer-body">
                                         <h3><a class="block color-pink h-medium bold mt-10" href="Bier.html">Bier</a></h3>
                                         <p class="mt-10"><a href="Bier.html">Mehr Angebote</a></p>
-                                        <p class="mt-10 strike">40€</p>
-                                        <p>20€</p>
+                                        <p class="mt-10">24x 0,355L</p>
+                                        <p>36,99 €</p>
                                         <button class="mt-10 cart-btn bg-pink flex align-center" type="button"><i class="color-darkgray fas fa-shopping-cart"></i><span class="block ml-10"></span>Zum Warenkorb hinzufügen</button>
                                     </div>
                                 </div>
@@ -155,8 +154,8 @@
                                     <div class="m-v offer-body">
                                         <h3><a class="block color-pink h-medium bold mt-10" href="Softdrinks.html">Softdrinks</a></h3>
                                         <p class="mt-10"><a href="Softdrinks.html">Mehr Angebote</a></p>
-                                        <p class="mt-10 strike">40</p>
-                                        <p>28</p>
+                                        <p class="mt-10">6x 0,5L</p>
+                                        <p>3,99 €</p>
                                         <button class="mt-10 cart-btn bg-pink flex align-center" type="button"><i class="color-darkgray fas fa-shopping-cart"></i><span class="block ml-10"></span>Zum Warenkorb hinzufügen</button>
                                     </div>
                                 </div>
@@ -172,8 +171,8 @@
                                     <div class="m-v offer-body">
                                         <h3><a class="block color-pink h-medium bold mt-10" href="Spirituosen.html">Spirituosen</a></h3>
                                         <p class="mt-10"><a href="Spirituosen.html">Mehr Angebote</a></p>
-                                        <p class="mt-10 strike">400$</p>
-                                        <p>280$</p>
+                                        <p class="mt-10">0,75L</p>
+                                        <p>17,99 €</p>
                                         <button class="mt-10 cart-btn bg-pink flex align-center" type="button"><i class="color-darkgray fas fa-shopping-cart"></i><span class="block ml-10"></span>Zum Warenkorb hinzufügen</button>
                                     </div>
                                 </div>
@@ -189,8 +188,8 @@
                                     <div class="m-v offer-body">
                                         <h3><a class="block color-pink h-medium bold mt-10" href="Sprudel.html">Sprudel</a></h3>
                                         <p class="mt-10"><a href="Sprudel.html">Mehr Angebote ansehen</a></p>
-                                        <p class="mt-10 strike">10€</p>
-                                        <p>10€</p>
+                                        <p class="mt-10">6x 0,75L</p>
+                                        <p>24,99 €</p>
                                         <button class="mt-10 cart-btn bg-pink flex align-center" type="button"><i class="color-darkgray fas fa-shopping-cart"></i><span class="block ml-10"></span>Zum Warenkorb hinzufügen</button>
                                     </div>
                                 </div>
@@ -297,7 +296,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">10€</p>
                         </div>
                     </div>
                 </div>
@@ -438,9 +436,9 @@
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Softdrinks/Fanta.jpg" alt="Fanta">
                         </div>
-                        
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Fanta 6x 0,5L</a></h4>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -451,15 +449,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">9,99€</p>
+                            <a href="html/search-result.html"><p class="mt-10">3,49€</p></a>
                         </div>
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Softdrinks/Fanta-GreenApple.jpg" alt="Fanta-GreenApple">
                         </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Fiji</a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">lorem ipsum lorem ipsum lorem ipsum lorem ipsum  </p></a>
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Fanta Green Apple 6x 0,355L</a></h4>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -470,15 +467,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">24,99$</p>
+                            <a href="html/search-result.html"><p class="mt-10">3,49 €</p></a>
                         </div>
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Softdrinks/Mezzo.jpg" alt="Mezzo">
                         </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Wolfscraft das Helle! </a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">lorem ipsum lorem ipsumlorem </p></a>
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Mezzo Mix 6x 0,45L</a></h4>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -489,7 +485,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="preis">24,99€</p>
+                            <a href="html/search-result.html"><p class="mt-10">3,49 €</p></a>
                         </div>
                     </div>
                 </div>
@@ -517,10 +513,9 @@
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Sprudel/SanPellegrino.jpg" alt="SanPellegrino">
                         </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">#383838;</a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">#383838;</p></a>
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">San Pellegrino 6x 1L</a></h4>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -531,14 +526,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">24,99€</p>
+                            <a href="html/search-result.html"><p class="mt-10">16,99 €</p></a>
                         </div>
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Sprudel/Vio.jpg" alt="Vio">
                         </div>
-                        
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Vio 6x 1L</a></h4>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -549,15 +544,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">9,99€</p>
+                            <a href="html/search-result.html"><p class="mt-10">9,99 €</p></a>
                         </div>
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Sprudel/Vittel.jpg" alt="Vittel">
                         </div>
                         <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Fiji</a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">lorem ipsum lorem ipsum lorem ipsum lorem ipsum  </p></a>
+                        <a href="html/search-result.html"><p class="mt-10">Vittel 6x 1L</p></a>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -568,15 +563,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">24,99$</p>
+                            <a href="html/search-result.html"><p class="mt-10">13,99 €</p></a>
                         </div>
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Sprudel/Volvic.jpg" alt="Volvic">
                         </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Wolfscraft das Helle! </a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">lorem ipsum lorem ipsumlorem </p></a>
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Volvic 6x 1L</a></h4>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -587,7 +581,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="preis">24,99€</p>
+                            <a href="html/search-result.html"><p class="mt-10">11,99 €</p></a>
                         </div>
                     </div>
                 </div>
