--- a/Frontend/Bier.html
+++ b/Frontend/Bier.html
@@ -409,91 +409,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card p-20 p-relative">
-                        <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/Softdrinks/zeroground2.PNG" alt="Sprite">
-                        </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Sprite 6x 0,5L</a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">3,49 €</p></a>
-                        <div class="pt-20">
-                            <div class="flex justify-between p-absolute card-bottom mt-10">
-                                <div class="plus-icon p-relative">
-                                    <i class="fas fa-plus"></i>
-                                    <div class="p-absolute dropdown bg-white">
-                                        <a class="block dropdown-link" href="html/search-result.html">in den Warenkorb</a>
-                                        <a class="block dropdown-link" href="html/search-result.html">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card p-20 p-relative">
-                        <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
-                        </div>
-                        
-                        <div class="pt-20">
-                            <div class="flex justify-between p-absolute card-bottom mt-10">
-                                <div class="plus-icon p-relative">
-                                    <i class="fas fa-plus"></i>
-                                    <div class="p-absolute dropdown bg-white">
-                                        <a class="block dropdown-link" href="html/search-result.html">in den Warenkorb</a>
-                                        <a class="block dropdown-link" href="html/search-result.html">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">9,99€</p>
-                        </div>
-                    </div>
-                    <div class="card p-20 p-relative">
-                        <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
-                        </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Fiji</a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">lorem ipsum lorem ipsum lorem ipsum lorem ipsum  </p></a>
-                        <div class="pt-20">
-                            <div class="flex justify-between p-absolute card-bottom mt-10">
-                                <div class="plus-icon p-relative">
-                                    <i class="fas fa-plus"></i>
-                                    <div class="p-absolute dropdown bg-white">
-                                        <a class="block dropdown-link" href="html/search-result.html">Zum Warenkorb hinzufügen</a>
-                                        <a class="block dropdown-link" href="html/search-result.html">See Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">24,99$</p>
-                        </div>
-                    </div>
-                    <div class="card p-20 p-relative">
-                        <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
-                        </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Wolfscraft das Helle! </a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">lorem ipsum lorem ipsumlorem </p></a>
-                        <div class="pt-20">
-                            <div class="flex justify-between p-absolute card-bottom mt-10">
-                                <div class="plus-icon p-relative">
-                                    <i class="fas fa-plus"></i>
-                                    <div class="p-absolute dropdown bg-white">
-                                        <a class="block dropdown-link" href="html/search-result.html">Zum Warenkorb hinzufügen</a>
-                                        <a class="block dropdown-link" href="html/search-result.html">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="preis">24,99€</p>
-                        </div>
-                    </div>
-                </div>
             </section>
             <section class="mt-45 ph-20">
                 <h2 class="section-header block color-darkgray g-rounded"><a href="html/search-result.html">Radler</a></h2>
                 <div class="flex flex-wrap justify-between">
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/Sprudel/2k21.PNG" alt="Fiji">
+                            <img class="block m-h card-img p-absolute" src="../images/Bier/2.5Radler.jpg" alt="2.5Radler">
                         </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Fiji Still 6x 0,75L</a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">24,99 €</p></a>
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">2,5 Original 24x 0,5L</a></h4>
+                        <a href="html/search-result.html"><p class="mt-10">6,40 €</p></a>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom">
                                 <div class="plus-icon p-relative">
@@ -508,10 +433,10 @@
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Bier/5.0Radler.jpg" alt="5.0Radler">
                         </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">#383838;</a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">#383838;</p></a>
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">5,0 Original 24x 0,5L</a></h4>
+                        <a href="html/search-result.html"><p class="mt-10">7,20 €</p></a>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -522,14 +447,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">24,99€</p>
                         </div>
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Bier/BitburgerRadler.jpg" alt="BitburgerRadler">
                         </div>
-                        
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Bitburger Radler 20x 0,5L</a></h4>
+                        <a href="html/search-result.html"><p class="mt-10">16,99 €</p></a>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -540,15 +465,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">9,99€</p>
                         </div>
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Bier/Naturradler.jpg" alt="Naturradler">
                         </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Fiji</a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">lorem ipsum lorem ipsum lorem ipsum lorem ipsum  </p></a>
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Fürstenberg Naturradler 20x 0,5L</a></h4>
+                        <a href="html/search-result.html"><p class="mt-10">16,00 €</p></a>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -559,15 +483,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="m-v color-pink h-medium bold p-absolute preis">24,99$</p>
                         </div>
                     </div>
                     <div class="card p-20 p-relative">
                         <div class="p-relative pb-100">
-                            <img class="block m-h card-img p-absolute" src="../images/2k21.png" alt="Risk">
+                            <img class="block m-h card-img p-absolute" src="../images/Bier/Naturtrueb.jpg" alt="Naturtrueb">
                         </div>
-                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Wolfscraft das Helle! </a></h4>
-                        <a href="html/search-result.html"><p class="mt-10">lorem ipsum lorem ipsumlorem </p></a>
+                        <h4><a class="block mt-10 color-pink h-medium bold" href="html/search-result.html">Hochdorfer Radler Naturtrüb 20x 0,5L </a></h4>
+                        <a href="html/search-result.html"><p class="mt-10">15,99 €</p></a>
                         <div class="pt-20">
                             <div class="flex justify-between p-absolute card-bottom mt-10">
                                 <div class="plus-icon p-relative">
@@ -578,7 +501,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="preis">24,99€</p>
                         </div>
                     </div>
                 </div>
@@ -640,4 +562,3 @@
     </footer>
 </body>
 </html>
-
